# XR-32

./: ARCH.md  CMakeLists.txt  LICENSE  Makefile  README.md  TODO
-Documentation/: History.md
-Documentation/1.0v1/: README.md
Assembler/: CMakeLists.txt  Grammar.md
Assembler/Include/: Error.hpp  Instruction.hpp  Lexer.hpp  Register.hpp  SymbolTable.hpp
Assembler/Source/: Lexer.cpp  main.cpp
Emulator/: CMakeLists.txt
Emulator/Source/: main.cpp
docs/: TODO.md
docs/1.0v1/: README.md
emulator/include/: emulator.hpp
emulator/include/components/: cpu.hpp  interrupts.hpp  io.hpp  isa.hpp  memory.hpp
emulator/include/utils/: argparser.hpp  assembler.hpp  disassembler.hpp  logger.hpp
emulator/src/: main.cpp
emulator/src/components/: cpu.cpp  interrupts.cpp  io.cpp  isa.cpp  memory.cpp
emulator/src/utils/: assembler.cpp
